# esbuild-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-go.sh  build.rs  esbuild.go  go.mod
.github/workflows/: demo.yml
bench/: .gitignore  Cargo.toml
demo/: Cargo.toml
demo/samplejs/: input.js
demo/src/: main.rs
lib/: .gitignore  build-dylib.sh  build.sh  esbuild.go  go.mod
nodejs/: .gitignore  README.md  binding.gyp  build-go.sh  go.mod  package.json
nodejs/bench/: package.json  run.js
nodejs/native/: Cargo.toml  binding.c  esbuild.go
nodejs/native/src/: lib.rs
nodejs/src/: index.ts
src/: bridge.rs  lib.rs  prelude.rs  wrapper.rs
src/api/: build.rs  mod.rs  transform.rs
src/test/: mod.rs
