[package]
name = "esbuild-rs"
version = "0.0.5"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/src/**/*", "/build.rs", "/Cargo.toml", "/lib/esbuild.go", "/lib/go.mod"]
description = "FFI wrapper around esbuild, an extremely fast JS minifier written in Go"
license = "MIT"
homepage = "https://github.com/wilsonzlin/esbuild-rs"
readme = "README.md"
keywords = ["js", "javascript", "minifier", "minify", "minification"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/esbuild-rs.git"

[features]
default = []
use-dll = []

[dependencies]
