[package]
name = "esbuild-rs"
version = "0.0.6"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/src/**/*", "/build.rs", "/Cargo.toml", "/lib/go.mod", "lib/vendor/**/*"]
description = "FFI wrapper around esbuild, an extremely fast JS minifier written in Go"
license = "MIT"
homepage = "https://github.com/wilsonzlin/esbuild-rs"
readme = "README.md"
keywords = ["js", "javascript", "minifier", "minify", "minification"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/esbuild-rs.git"

[dependencies]
libc = "0.2.72"

[target.'cfg(target_env="msvc")'.dependencies]
lazy_static = { version = "1.4.0" }
memorymodule-rs = { version = "0.0.2" }
