[package]
name = "esbuild-rs"
version = "0.2.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/src/**/*", "/build.rs", "/Cargo.toml", "/lib/go.mod", "lib/vendor/**/*"]
description = "Rust wrapper for esbuild, an extremely fast JS minifier written in Go"
license = "MIT"
homepage = "https://github.com/wilsonzlin/esbuild-rs"
readme = "README.md"
keywords = ["js", "javascript", "minifier", "minify", "minification"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/esbuild-rs.git"

[dependencies]
libc = "0.2"

[dev-dependencies]
# For doc example tests.
async-std = "1.6"
crossbeam = "0.7"

[target.'cfg(target_env = "msvc")'.dependencies]
lazy_static = { version = "1.4" }
memorymodule-rs = { version = "0.0.3" }
