[package]
name = "demo"
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"

[target.'cfg(not(windows))'.dependencies]
esbuild-rs = { path = ".." }

[target.'cfg(windows)'.dependencies]
esbuild-rs = { path = "..", features = ['use-dll'] }
